--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,4 +1,9 @@
 .odd {
     background-color: rgb(219, 125, 125);
-    font-family: 'Verdana', 'DejaVu Sans', sans-serif
+    font-family: 'Verdana', 'DejaVu Sans', sans-serif;
+}
+
+#second {
+    color: rgb(21, 6, 243);
+    font-size: 32px;
 }
