--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
 #third {
     font-size: 24px;
 }
+
+#fourth {
+    background-color: rgb(162, 247, 145);
+    font-size: 24px;
+    font-weight: bold;
+}
