--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  text-align: center;
 }
 
 img {
@@ -10,6 +14,21 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: auto;
+}
+
+.images-container {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+
+.image {
+  display: flex;
+  flex-basis: 200px;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 /* do not edit this footer */
