--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -25,9 +26,14 @@ input {
   width: 400px;
 }
 
-.header {
+.header,
+.footer {
   display: flex;
   justify-content: space-between;
+}
+
+.footer {
+  background-color: #ddd;
 }
 
 .left-links,
@@ -51,3 +57,16 @@ a {
   text-decoration: none;
   color: rgb(94, 94, 94);
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  height: 90%;
+  border: 3px solid black;
+}
+
+/* .content * {
+  align-self: center;
+} */
