--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -61,12 +63,8 @@ a {
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 15px;
-  height: 90%;
-  border: 3px solid black;
+  flex-grow: 1;
 }
-
-/* .content * {
-  align-self: center;
-} */
