--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -8,6 +8,11 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 32px;
+  font-weight: 900;
+  align-content: center;
+  padding-left: 16px;
 }
 
 .footer {
