--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -26,6 +26,7 @@ body {
 .sidebar {
   width: 300px;
   flex-grow: 1;
+  flex-shrink: 0;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -46,11 +47,18 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex-basis: 300px;
+  padding: 8px 12px;
 }
 
 .content {
   display: flex;
-  flex-direction: column;
   flex-grow: 1;
+}
+
+.card-grid {
+  display: flex;
   flex-wrap: wrap;
+  padding: 48px;
+  gap: 24px;
 }
